# meridian

./: README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .gitignore  .npmrc  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pnpm.yaml  tsconfig.json  vitest.config.ts
backend-ai/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend-ai/src/: __init__.py  main.py
backend-ai/src/core/: config.py  database.py  logger.py  middleware.py  qdrant_client.py  redis_client.py  worker.py
backend-ai/src/features/audio_evidence/: __init__.py  service.py
backend-ai/src/features/monitoring_agent/: __init__.py  agent_graph.py  models.py  news_agent.py  ngo_agent.py  regulatory_agent.py  service.py  social_agent.py
backend-ai/src/features/report_generator/: __init__.py  models.py  report_chain.py
backend-ai/src/features/report_generator/templates/: __init__.py  csddd_template.py  lksg_template.py  uflpa_template.py
backend-ai/src/features/translator/: __init__.py  translation_service.py
backend-ai/src/features/vvs_scoring/: __init__.py  ai_classifier.py  classifier.py  models.py  scoring_engine.py
backend-ai/src/integrations/: __init__.py  aimlapi_client.py  featherless_client.py  mcp_client.py  scraping_browser.py  serp_api.py  speechmatics_client.py  web_scraper_api.py  web_unlocker.py
backend-ai/src/lib/: logger.py  response.py  utils.py
backend-ai/tests/: test_ai_classifier.py  test_audio_evidence.py  test_classifier.py  test_vvs_scoring.py
(+168 files in other folders)
